import java.util.*;

public class Multidoku {
    private ArrayList<Grille> mutligrille;
}
