@startuml
'https://plantuml.com/class-diagram

class multidoku{
arraylist<Grille>
gererbloccommun()
}
interface génération{

}
class coordoner{
int x;
int y;
getx()
gety()
}
 class Sudoku {
arraylist<Bloc> Grille
int taille
method()
casenoncommun()
}
class Bloc {
arraylist<Case>
}

class Ligne {
int index
}

class Bloccarré {
super
int taille
Bloccarré()
vérifiecarré()


}

multidoku *-- Sudoku
Case *-- coordoner
Sudoku *-- Bloc
Bloc *-- Case
Bloc <|-- Ligne
Bloc <|-- Colonne
Bloc <|-- Bloccarré

class Colonne {
int index
}
class Case {
coordoner coord
int valeur

}


@enduml